# tad-conversion-tool

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml
conversion_utils/: main.py
mock_data/: algoritmeregister_v010_entry.csv  algoritmeregister_v040_entry.csv  algoritmeregister_v100_entry.csv  expected_algoritmeregister_v010_model_card.yaml  expected_algoritmeregister_v040_model_card.yaml  expected_algoritmeregister_v100_model_card.yaml  expected_toetsingskader_algoritmes_v1_model_card.yaml  mock_toetsingskader.xlsx
scripts/: convert_algoritmeregister.sh  convert_toetsingskader_v1.sh
scripts/tests/: test_algoritmeregister_transform.sh  test_toetsingskader_transform.sh
transformations/algoritmeregister/: v010_to_systemcard_v01a3.yq  v040_to_systemcard_v01a3.yq  v100_to_systemcard_v01a3.yq
transformations/toetsingskader_algoritmes/: v1_to_systemcard_v01a3.yq
